sf-dynamic-approvals/main/default/objects/DynamicApprovalProcess__c/DynamicApprovalProcess__c.object-meta.xml
<CustomObject>
    <label>Dynamic Approval Process</label>
    <nameField>
        <displayFormat>DAP-{0000000}</displayFormat>
        <label>Dynamic Approval Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dynamic Approval Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>