sf-dynamic-approvals/main/default/objects/DynamicApprovalProcess__c/fields/ApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>ApprovalDate__c</fullName>
    <label>Approval Date</label>
    <type>DateTime</type>
</CustomField>