sf-dynamic-approvals/main/default/objects/DynamicApprovalProcess__c/fields/ProcessDefinitionName__c.field-meta.xml
<CustomField>
    <fullName>ProcessDefinitionName__c</fullName>
    <label>Process Definition Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>