sf-dynamic-approvals/main/default/objects/DynamicApprovalProcess__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <externalId>true</externalId>
    <label>RecordId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>